--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ colored = "1.8.0"
 num_cpus = "1.10.0"
 error-chain = "0.12.1"
 byteorder = "1.3.2"
-jemallocator = "0.3.2"
 
 [dependencies.blake2-rfc]
 version = "0.2.18"
@@ -24,5 +23,10 @@ version = "0.7.0"
 features = ["small_rng"]
 
 [dependencies.rocksdb]
-version = "0.12.3"
+git = "https://github.com/jawid-h/rust-rocksdb"
+branch = "close-and-destroy"
 default-features = false
+
+[dependencies.jemallocator]
+version = "0.3.2"
+features = ["disable_initial_exec_tls"]
