fix: flush happens even if DB was already closed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ features = ["small_rng"]
 
 [dependencies.rocksdb]
 git = "https://github.com/dashevo/rust-rocksdb"
-branch = "close-and-destroy"
+branch = "master"
 default-features = false
 
 [dependencies.jemallocator]
