--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ byteorder = "1.3.2"
 
 [dependencies.blake2-rfc]
 version = "0.2.18"
-features = ["bench", "simd_asm"]
+features = ["bench"]
 
 [dependencies.rand]
 version = "0.7.0"
